--- a/finalproject/faq.html
+++ b/finalproject/faq.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
     <link rel = "stylesheet" href = "css/large.css">
@@ -31,7 +31,7 @@
         </header>
         <main>
             <section class="main-img">
-                <img id="header-imgBROKEN" src="images/headerimg9.jpg">
+                <img id="header-imgBROKEN" src="images/headerimg9.jpg" alt="various hair supplies">
             </section>
             <section class="service-1">
                 <h2>Frequently Asked Questions</h2>
@@ -53,7 +53,6 @@
                 <p>I have a $50 minimum per visit.</p>
             </section>
         </main>
-    </body>
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
@@ -68,9 +67,9 @@
             <section class="footer-part-2">
                 <h2 class="footer-h2">Location</h2>
                 <a href="https://www.google.com/maps/place/2221+Swamp+Fox+Rd,+Midlothian,+VA+23112/@37.4679912,-77.711943,17z/data=!3m1!4b1!4m5!3m4!1s0x89b17051260cbc6d:0x224fed0ee9b290b!8m2!3d37.467987!4d-77.7077158">
-                <button class="footer-link" href="https://googlemaps.com" alt="map of Ryann's address">Google map locaiton</button>
+                <button class="footer-link" href="https://googlemaps.com" >Google map locaiton</button>
                 </a>
-                <img id="footer-map" src="images/footer-map.png">
+                <img id="footer-map" src="images/footer-map.png" alt="map of Ryann's address">
             </section>
             <section class="footer-part-3">
                 <h2 class="footer-h2">Contact Information</h2>
