--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
     <link rel = "stylesheet" href = "css/large.css">
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="main-img">
-            <img id="header-img" src="images/headerimg.jpg">
+            <img id="header-img" src="images/headerimg.jpg" alt="stack of papers with hair related math equations">
         </section>
         <section class="homepage">
         <section class="main-sec-1">
@@ -124,29 +124,29 @@
 
     <table class="generated-table2">
           <tr>
-            <th>Monday</td>
+            <th>Monday</th>
             <td>8am - 5pm</td>
           </tr>
           <tr>
-            <th>Tuesday</td>
+            <th>Tuesday</th>
             <td>8am - 5pm</td>
           </tr>
           <tr>
-            <th>Wednesday</td>
+            <th>Wednesday</th>
             <td>8am - 5pm</td>
           </tr>
           <tr>
-            <th>Thursday</td>
+            <th>Thursday</th>
             <td>8am - 5pm</td>
           </tr>
           <tr>
-        <th>Friday</td>
+        <th>Friday</th>
             <td>8am - 3pm</td>
         </tr>
-        <th>Saturday</td>
+        <th>Saturday</th>
             <td>8am - 8pm</td>
         </tr>
-        <th>Sunday</td>
+        <th>Sunday</th>
             <td>Closed</td>
         </tr>
       </table>
@@ -174,7 +174,7 @@
                 <a href="https://www.google.com/maps/place/2221+Swamp+Fox+Rd,+Midlothian,+VA+23112/@37.4679912,-77.711943,17z/data=!3m1!4b1!4m5!3m4!1s0x89b17051260cbc6d:0x224fed0ee9b290b!8m2!3d37.467987!4d-77.7077158">
                 <button class="footer-link" href="https://googlemaps.com">Google map locaiton</button>
                 </a>
-                <img id="footer-map" src="images/footer-map.png">
+                <img id="footer-map" src="images/footer-map.png" alt="map of where Ryann lives">
             </section>
             <section class="footer-part-3">
                 <h2 class="footer-h2">Contact Information</h2>
