--- a/finalproject/services.html
+++ b/finalproject/services.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
     <link rel = "stylesheet" href = "css/large.css">
@@ -31,7 +31,7 @@
         </header>
         <main>
             <section class="main-img">
-                <img id="header-imgBROKEN" src="images/headerimg5.jpg">
+                <img id="header-imgBROKEN" src="images/headerimg5.jpg" alt="Various hair products">
             </section>
 
             
@@ -46,7 +46,7 @@
                         <p>Regrowth (Under 1 inch) --- $65.00</p>
                         <p>Regrowth (Over 1 inch) --- $80.00</p>
                         <br><br><br><br><br>
-                        <img class="service-img" src="images/services4.png">
+                        <img class="service-img" src="images/services4.png" alt="Woman with a red bob">
                     </section>
                 <section class="service-3">
                     <h3>Cuts</h3>
@@ -54,7 +54,7 @@
                     <p>With color --- $40.00</p>
                     <p>Without color --- $50.00</p>
                     <p>Mens clipper cut --- $30.00</p>
-                    <img class="service-img" src="images/services1.png">
+                    <img class="service-img" src="images/services1.png" alt="Woman with a brown bob">
                 </section>
                 <section class="service-4">
                     <h3>Highlights</h3>
@@ -62,27 +62,27 @@
                     <p>Partial --- $75.00</p>
                     <p>Full --- $120.00</p>
                     <p>Full with II --- $150.00</p>
-                    <img class="service-img" src="images/services2.png">
+                    <img class="service-img" src="images/services2.png" alt="woman with long blond hair">
                 </section>
                 <section class="service-7">
                     <h3>Packages</h3>
                     <p>Root touch up, mini highlight, and either a cut OR Olaplex treatment --- $150.00</p>
                     <p>Olaplex treatment with cut --- $90.00</p>
-                    <img class="service-img" src="images/services6.png">
+                    <img class="service-img" src="images/services6.png" alt="Woman with long honey hair">
                 </section>
                 <section class="service-2">
                     <h3>Olaplex Treatment</h3>
                     <p>Stand alone treatment --- $50.00</p>
                     <p>With color service --- $30.00</p>
                     <br><br><br><br><br>
-                    <img class="service-img" src="images/services5.png">
+                    <img class="service-img" src="images/services5.png" alt="boy with white hair">
                 </section>
                 <section class="service-5">
                     <h3>Toner</h3>
                     <p>Partial --- $20.00</p>
                     <p>Full --- $30.00</p>
                     <br><br><br>
-                    <img class="service-img" src="images/services3.png">
+                    <img class="service-img" src="images/services3.png" alt="Woman with light blond hair">
                 </section>
                 <section class="service-8">
                     <h3>EXTRA CHARGE FOR EXTREMELY LONG OR THICK HAIR <br>(Requiring extra color or blow dry time)</h3>
@@ -96,7 +96,6 @@
 
 
         </main>
-    </body>
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
