--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
     <link rel = "stylesheet" href = "css/large.css">
@@ -31,7 +31,7 @@
         </header>
         <main>
             <section class="main-img">
-                <img id="header-img" src="images/headerimg.jpg">
+                <img id="header-img" src="images/headerimg.jpg" alt="papers with math equations">
             </section>
             <section class="service-1">
                 <h2>Thank you for making an appointment!</h2>
@@ -41,7 +41,6 @@
             <img id="thanku" src="images/thanku.jpg" alt="Ryann taking a selfie in a salon">
             </section>
         </main>
-    </body>
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
