--- a/finalproject/reservations.html
+++ b/finalproject/reservations.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
     <link rel = "stylesheet" href = "css/large.css">
@@ -31,7 +31,7 @@
         </header>
         <main>
             <section class="main-img">
-                <img id="header-imgBROKEN" src="images/headerimg6.jpg">
+                <img id="header-imgBROKEN" src="images/headerimg6.jpg" alt="various hair tools lined up">
             </section>
             <section class="service-1">
                 <h2>Reserve an appointment</h2>
@@ -71,7 +71,7 @@
             </section>
 
         </main>
-    </body>
+    
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
