--- a/finalproject/reviews.html
+++ b/finalproject/reviews.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Salon Ryann Rose is a website for the mobile hair salon located in Midlothian, Virginia.">
     <title>Salon Ryann Rose</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel = "stylesheet" href = "css/small.css">
     <link rel = "stylesheet" href = "css/medium.css">
     <link rel = "stylesheet" href = "css/large.css">
@@ -31,7 +31,7 @@
         </header>
         <main>
             <section class="main-img">
-                <img id="header-imgBROKEN" src="images/headerimg8.jpg">
+                <img id="header-imgBROKEN" src="images/headerimg8.jpg" alt="a boy with his hair pinned up">
             </section>
             <section class="service-1">
                 <h2>Salon Ryann Rose Reviews</h2>
@@ -146,7 +146,6 @@
                 </div>
             </section>
         </main>
-    </body>
     <footer>
         <div class="footer-grid">
             <section class="footer-part-1">
